fix: add identations in blocks according to the rule 3.5 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -18,8 +18,9 @@
 }
 
 @media (max-width:768px) {
-  .eisen-matrix { text-align: center;
-}
+  .eisen-matrix { 
+    text-align: center;
+  }
 }
 .todo-list {
   display: block;
