--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .task-row {
   display: flex;
@@ -117,7 +117,7 @@ li > label {
   width: 226px;
 }
 li >    .text-input {
-  width: 226px
+  width: 226px;
 }
 .delete img {
   height: 2em;
@@ -130,18 +130,18 @@ li >    .text-input {
 
 /* Completed */
 #completed-tasks label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 ul li .text-input {
-  display: none
+  display: none;
 }
 
 ul .edit-mode .text-input {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 ul .edit-mode label {
