fix: rename and add classes, removing tag selectors according the rules 3.2, 3.3, 3.4 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   display: block;
   text-align: right;
 }
-.eisen-matrix img {
+.eisen-matrix .eisen-image {
   width: 100%;
 }
 .eisen-matrix .more-info {
@@ -35,17 +35,17 @@
 .task-row {
   display: flex;
 }
-ul {
+.tasks-list {
   margin: 0;
   padding: 0px;
 }
-li, h3 {
+.task-item, .list-section-name {
   list-style: none;
 }
-input,button{
+.input,.button{
   outline: none;
 }
-button {
+.button {
   background: none;
   border: 0px;
   color: #888;
@@ -54,11 +54,11 @@ button {
   font-family: lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.button:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
+.list-section-name,
 .new-task-label {
   color: #333;
   font-weight: 700;
@@ -95,7 +95,7 @@ h3,
 }
 
 /* Task list */
-li {
+.task-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -103,47 +103,47 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.task-item > * {
   vertical-align: middle;
 }
 
-li > .checkbox-input {
+.task-item > .checkbox-input {
   margin: 0 10px;
 }
-li > label {
+.task-item > .label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    .text-input {
+.task-item >    .text-input {
   width: 226px;
 }
-.delete img {
+.delete .delete-icon {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-.delete img:hover {
+.delete .delete-icon:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-#completed-tasks label {
+#completed-tasks .label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li .text-input {
+.tasks-list .task-item .text-input {
   display: none;
 }
 
-ul .edit-mode .text-input {
+.tasks-list .edit-mode .text-input {
   display: inline-block;
   width: 224px;
 }
 
-ul .edit-mode label {
+.tasks-list .edit-mode .label {
   display: none;
 }
