--- a/style.css
+++ b/style.css
@@ -39,10 +39,12 @@
   margin: 0;
   padding: 0px;
 }
-.task-item, .list-section-name {
+.task-item, 
+.list-section-name {
   list-style: none;
 }
-.input,.button{
+.input,
+.button{
   outline: none;
 }
 .button {
@@ -116,7 +118,7 @@
   font-size: 18px;
   width: 226px;
 }
-.task-item >    .text-input {
+.task-item > .text-input {
   width: 226px;
 }
 .delete .delete-icon {
